--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <body>
             <h1>this is a header</h1>
+            <p>this is para</p>
         </body>
     </head>
 </html>
